## Makefile.am for include/

## Define the list of public header files and their install location. The
## nobase_ prefix instructs Automake to not strip the directory part from each
## filename, in order to avoid the need to define separate file lists for each
## installation directory. This only works if the directory hierarchy in the
## source tree matches the hierarchy at the install location, however.
libcoap_includedir = $(includedir)
nobase_libcoap_include_HEADERS = \
   coap/address.h \
   coap/async.h \
   coap/bits.h \
   coap/block.h \
   coap/coap.h \
   coap/coap_io.h \
   coap/coap_time.h \
   coap/debug.h \
   coap/encode.h \
   coap/hashkey.h \
   coap/mem.h \
   coap/net.h \
   coap/option.h \
   coap/pdu.h \
   coap/prng.h \
   coap/resource.h \
   coap/str.h \
   coap/subscribe.h \
   coap/t_list.h \
   coap/uri.h \
   coap/uthash.h \
   coap/utlist.h
#  lwipppools.h
